<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constLayoutNewFeedback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiposts.UserDetailsFragment"
    android:windowSoftInputMode="adjustResize">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#9F9F9F"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/empty"
        app:icon="@drawable/back_icon" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/feedback"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonContact" />

                <TextView
                    android:id="@+id/textView11"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/availability"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPriceDetails" />

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />

                <TextView
                    android:id="@+id/textViewTypeDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="owner/sitter/walker"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNameDetails" />

                <TextView
                    android:id="@+id/textViewLocationDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescriptioDetails" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:text="@string/location"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDescriptioDetails" />

                <TextView
                    android:id="@+id/textViewPriceDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="text"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLocationDetails" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="0dp"
                    android:text="@string/price"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <TextView
                    android:id="@+id/textViewDescriptioDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/empty"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:paddingStart="0dp"
                    android:text="@string/description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ratingBar4" />

                <RatingBar
                    android:id="@+id/ratingBar4"
                    style="@android:style/Widget.Holo.Light.RatingBar.Small"
                    android:layout_width="81dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="2dp"
                    android:paddingTop="4dp"
                    app:layout_constraintStart_toStartOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTypeDetails" />

                <TextView
                    android:id="@+id/textViewNameDetails"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="Name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="225dp"
                    android:layout_height="225dp"
                    android:layout_marginStart="59dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="59dp"
                    android:background="#8E24AA"
                    android:src="@drawable/account_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonContact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#29752D"
                    android:text="@string/contact"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendarView" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/oval_border_with_background"
                    android:backgroundTint="#6DA6AE"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12">

                    <RatingBar
                        android:id="@+id/ratingBarNewFeedback"
                        style="@android:style/Widget.Holo.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="1"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFeedback"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNameFeedback" />

                    <ImageView
                        android:id="@+id/imageViewFeedback"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="#8E24AA"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/account_icon" />

                    <TextView
                        android:id="@+id/textViewNameFeedback"
                        style="@style/Widget.AppCompat.TextView.SpinnerItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:paddingStart="0dp"
                        android:text="Name"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFeedback"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/textViewMessageFeedback"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/oval_border_with_background"
                        android:paddingStart="8dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="4dp"
                        android:hint="@string/message_hint"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonSendFeedback"
                        app:layout_constraintHorizontal_bias="0.433"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewFeedback" />

                    <Button
                        android:id="@+id/buttonSendFeedback"
                        android:layout_width="50dp"
                        android:layout_height="33dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="#556F7C"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="8dp"
                        app:icon="@drawable/send_message3"
                        app:iconPadding="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView2"
                android:name="com.example.dogwalkerv3.uiposts.feedback.FeedbackFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled = "false"/>

        </LinearLayout>
    </ScrollView>


</FrameLayout>